# LuaNetSentinel

./: .env.example  .gitignore  LICENSE  README.md  justfile  proyecto.md  pyproject.toml
.github/workflows/: ci.yml
config/: scope.yaml
lab/: README.md  docker-compose.yml
lns/: __main__.py
lns/alerting/: email_smtp.py  notify.py  telegram.py
lns/collectors/: scanner.py  traffic.py  weblog.py
lns/core/: baseline.py  correlation.py  cve.py  finding.py  i18n.py  rules.py  scope.py  scoring.py  store.py  watch.py
lns/export/: html.py  json_export.py
lns/tui/: app.py  theme.tcss
lns/util/: entropy.py  sanitize.py
nse/: suspicious-services.nse
rules/scanner/: exposure.py  tls.py
rules/traffic/: cleartext.py  dns.py
rules/weblog/: signatures.py
templates/: report.html.j2
tests/: test_alerting.py  test_baseline.py  test_cve.py  test_export.py  test_i18n.py  test_scanner.py  test_traffic.py  test_tui.py  test_weblog.py
tests/fixtures/: nmap.xml  sample.pcap
