[project]
name = "luanetsentinel"
version = "0.1.0"
description = "Auditor y mini-IDS de red defensivo, para línea de comandos"
authors = [{ name = ">IZ:: / Glitchbane" }]
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "textual>=0.60",
    "rich>=13",
    "scapy>=2.5",
    "jinja2>=3.1",
    "pyyaml>=6",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.4", "mypy>=1.10"]

[project.scripts]
lns = "lns.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lns"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
pythonpath = ["."]
